Source/WebKit/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp
@@ -738,8 +738,6 @@ void WebFrameLoaderClient::dispatchDecidePolicyForResponse(const ResourceRespons
         return;
     }
 
-    ASSERT(!m_isDecidingNavigationPolicyDecision);
-
     RefPtr<API::Object> userData;
 
     // Notify the bundle client.
@@ -825,10 +823,6 @@ void WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction(const Navigat
 
     LOG(Loading, "WebProcess %i - dispatchDecidePolicyForNavigationAction to request url %s", getCurrentProcessID(), request.url().string().utf8().data());
 
-    m_isDecidingNavigationPolicyDecision = true;
-    if (m_frame->isMainFrame())
-        webPage->didStartNavigationPolicyCheck();
-
     // Always ignore requests with empty URLs. 
     if (request.isEmpty()) {
         function(PolicyAction::Ignore);
@@ -908,25 +902,8 @@ void WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction(const Navigat
         m_frame->didReceivePolicyDecision(listenerID, PolicyAction::Ignore, 0, { }, { });
 }
 
-void WebFrameLoaderClient::didDecidePolicyForNavigationAction()
-{
-    if (!m_isDecidingNavigationPolicyDecision)
-        return;
-
-    m_isDecidingNavigationPolicyDecision = false;
-
-    if (!m_frame || !m_frame->isMainFrame())
-        return;
-
-    if (auto* webPage = m_frame->page())
-        webPage->didCompleteNavigationPolicyCheck();
-}
-
 void WebFrameLoaderClient::cancelPolicyCheck()
 {
-    if (m_isDecidingNavigationPolicyDecision)
-        didDecidePolicyForNavigationAction();
-
     m_frame->invalidatePolicyListener();
 }
 
@@ -1332,8 +1309,6 @@ void WebFrameLoaderClient::provisionalLoadStarted()
     WebPage* webPage = m_frame->page();
     if (!webPage)
         return;
-
-    ASSERT(!m_isDecidingNavigationPolicyDecision);
 
     if (m_frame->isMainFrame()) {
         webPage->didStartPageTransition();
